ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail13.mligo
type storage = int
type action = | Increment of nat | Decrement of nat
let main (p,s: action * storage) =
 let stor =
   match p with 
   | Increment n -> s +1
   | Decrement -> s -1
 in ([] : operation list), stor